# kann

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  analysis.txt  ann.c  autodiff.c  autodiff.h  cli.c  kad_debug.c  kann.c  kann.h  kann_ann.c  kann_ann.h  kann_data.c  kann_extra.c  kann_min.c  kann_min.h  kann_mlp.c  kann_mlp.h  kann_model.c  kann_opt.h  kann_rand.c  kann_rand.h  kautodiff.c  kautodiff.h  kautodiff_opt.c  layer.c  main.c  mnist-dependancies.md  model.c  reader.c
cmake/: CTestConfig.cmake  KannConfig.cmake.in  KannConfig.h.in  MultiCPackConfig.cmake  README.txt  Welcome.txt
dependencies/blas/: cblas.h
dna/: Makefile  README.md  dna-brnn.c  dna-cnn.c  dna-io.c  dna-io.h
doc/: 01dev.md  01user.md  02dev.md  11math.tex  README.md  frameworks.md
examples/: .gitignore  CMakeLists.txt  README.md  ae.c  conf2  dna-brnn.c  inspect.c  mlp.c  mnist-cnn  mnist-cnn.c  mnist-cnn_opt.c  mnist-eval.pl  results.md  rnn-add.c  rnn-bit.c  rnn-bit2.c  rnn-charnn.c  rnn-lyap.c  run_no_opt.sh  run_opt.sh  textgen-p.c  textgen.c  vae.c
examples/kann-data/: 00README.txt  accelerando.txt  mnist-ascii.pl  mnist-eval.pl  mul100.train.txt
examples/keras/: mlp.py  rnn-bit.py
examples/tensorflow/: mlp.py
examples/tiny-dnn/: Makefile  README.md  mlp.cpp  mnist-mlp.cpp
kann/: CMakeLists.txt
kann_extra/: CMakeLists.txt  kann_data.c  kann_data.h  kseq.h
models/: kann_data.h  mlp.c  textgen.c
tensorflow/: mlp.py
test_mmm/: notes.md
